=========================
2006-03-26 00:52:26 v1_10
=========================

  2006-03-26 00:52:09 (r43) by rcaputo; Ping.pm M

    Bump the volume a little more than usual. 

  2006-03-26 00:49:09 (r42) by rcaputo; Ping.pm M

    Applied Nick Williams' patch from rt.cpan.org ticket #18337. That's
    almost 1337, but not. Anyway, he's added queuing. It's off by
    default. When enabled, though, the component tries not to spew more
    ICMP requests down the pipe than the operating system can handle. It
    tries to make a guess about opmital parameters, but it's going to be
    inaccurate for lots of people. Nick anticipated this and added
    tunables.
    
    While he was queuing and throttling, Nick also added the option to
    have PoCo::Client::Ping retry a number of times before reporting that
    a host is down.
    
    Since this was a large patch, I took the opportunity to retab and
    restyle the code. 

  2005-06-21 18:27:04 (r41) by rcaputo; MANIFEST M; Makefile.PL M

    Remove META.yml from MANIFEST since it's auto-generated at "make
    dist" time. Have Makefile.PL generate CHANGES with svn-log.perl
    instead of cvs-log.perl. 

==============
End of Excerpt
==============