@@ -1,3 +1,12 @@
+==============================
+9999-99-99 99:99:99 (untagged)
+==============================
+
+  2006-05-20 23:16:47 (r45) by rcaputo; Ping.pm M
+
+    Apply Michael Costello's suggestion to avoid the root check on
+    cygwin. Bump the version for a new release. 
+
 =========================
 2006-03-26 00:52:26 v1_10
 =========================
